<resources>
    <string name="app_name">Calculadora</string>
    <string name="boton_suma">Sumar</string>
    <string name="boton_resta">Restar</string>
    <string name="boton_multiplicacion">Multiplicar</string>
    <string name="boton_division">Dividir</string>
    <string name="Saludo">¿Que pasión krnal?</string>
    <string name="Numero_1">Numero 1</string>
    <string name="Numero_2">Numero 2</string>
    <string name="Resultado_S">Resultado</string>
    <string name="Resultado_R">Resultado</string>
    <string name="Resultado_M">Resultado</string>
    <string name="Resultado_D">Resultado</string>
</resources>
